@@ -14,14 +14,15 @@
           <tal:block i18n:translate="">Key message</tal:block>
         </h2>
 
-        <tal:def tal:define="fieldname string:key_message;
-          fieldset string:default; ">
+        <tal:def tal:define="fieldname string:key_message; fieldset string:default; ">
           <metal:macro metal:use-macro="context/indicators_macros/macros/active_field">
-            <metal:slot metal:fill-slot="content">
-              <div tal:condition="python:not imsutils.field_has_value('key_message', context)"
-                class="placeholder">
-                <span class="required" i18n:translate="">Please fill in</span>
-              </div>
+              <metal:slot metal:fill-slot="content" 
+                    tal:define="value_info python:imsutils.field_value_info(fieldname, context)">
+                <div tal:condition="not: value_info/has_value" class="placeholder">
+                  <span class="required" i18n:translate="">
+                    Please fill in. <span i18n:name="msg" tal:replace="value_info/msg" />
+                  </span>
+                </div>
               <div tal:replace="structure context/getKey_message" />
             </metal:slot>
             <metal:slot metal:fill-slot="extra-metadata">
